# NXP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PRODUCTION_AUDIT.md  README.md  SECURITY_AUDIT.md  TESTING_GUIDE.md  TEST_GUIDE.sh  TRANSPORT_ARCHITECTURE.md  con  context  latest  red.md  starter_context
.commandcode/taste/: taste.md
bench/: CMakeLists.txt
benches/: bench_tcp.c  bench_udp.c  bench_ws.c
bindings/go/: callbacks.go  nxp.go  protocol.go
cmake/: NxpCompilerFlags.cmake  NxpFindOpenSSL.cmake  NxpPlatformDetect.cmake  NxpVersion.cmake  nxp_platform_config.h.in
examples/: CMakeLists.txt  real_client.c  real_server.c  simple_server.c  test_error_tracking.c  test_logging.c  test_metrics.c  test_tcp.c  test_udp.c
examples/go_echo/: go.mod  go_echo  main.go  test_nxp.go  test_tcp.go  test_ws.go
include/nxp/: nxp.h  nxp_config.h  nxp_connection.h  nxp_error.h  nxp_listener.h  nxp_stream.h  nxp_types.h
src/: CMakeLists.txt
src/api/: api_internal.h  config.c  error.c  nxp_api.c  nxp_api_stub.c
src/congestion/: bbr.c  bbr_internal.h  cc_interface.h  cc_stub.c  delivery_rate.c  delivery_rate.h  pacing.c  pacing.h  windowed_filter.h
src/core/: ack.c  connection.c  connection_internal.h  core_stub.c  flow_control.c  frame.c.backup  frame_internal.h  handshake.c  handshake_internal.h  heartbeat.c  heartbeat_internal.h  listener.c  listener_internal.h  migration.c  migration_internal.h  packet.c  packet_internal.h  rate_limit.h  scheduler.c  session_export.c  session_export.h  stream.c  stream_rate.h  validation.h
src/crypto/: aead.c  crypto_internal.h  crypto_stub.c  handshake_crypto.c  header_protection.c  hkdf.c  proof_of_work.c  proof_of_work.h  retry_token.c  secure_mem.h  session_ticket.c
src/logging/: CMakeLists.txt  nxp_log.cpp  nxp_log.h
src/memory/: CMakeLists.txt  arena.c  arena.h  packet_buffer.c  packet_buffer.h  pool.c  pool.h  slab.c  slab.h
src/platform/: CMakeLists.txt  event_loop.c  event_loop.h  platform.h  platform_atomic.h  platform_endian.h  platform_memory.h  platform_socket.h  platform_thread.h  platform_time.h  transport.c  transport.h
src/platform/darwin/: kqueue_event_loop.c
src/platform/linux/: epoll_event_loop.c  platform_linux.c  posix_socket.c  posix_thread.c  posix_time.c
src/platform/windows/: iocp_event_loop.c  platform_win.c  win_thread.c  win_time.c  winsock_socket.c
src/transport/: CMakeLists.txt
src/transport/tcp/: transport_tcp.c
src/transport/udp/: transport_udp.c
src/transport/websocket/: transport_ws.c  ws_frame.c  ws_frame.h  ws_handshake.c  ws_handshake.h
src/util/: CMakeLists.txt  checked_int.h  crc32c.c  crc32c.h  error_tracker.c  error_tracker.h  flight_recorder.c  flight_recorder.h  hash_map.c  hash_map.h  intrusive_list.c  intrusive_list.h  log.c  log.h  metrics.c  metrics.h  priority_queue.c  priority_queue.h  random.c  random.h  ring_buffer.c  ring_buffer.h  varint.c  varint.h
tests/: CMakeLists.txt  test_framework.h
tests/fuzz/: CMakeLists.txt  fuzz_frame.c  fuzz_packet.c
tests/go/: go.mod  nxp.go  nxp_test.go  protocol.go  run_test.sh
tests/go/user1/: main.go
tests/go/user2/: main.go
tests/integration/: CMakeLists.txt  test_e2e_echo.c  test_tcp_framing.c  test_udp_echo.c  test_ws_e2e.c
tests/unit/: CMakeLists.txt  test_ack.c  test_arena.c  test_bbr.c  test_checked_int.c  test_connection.c  test_crc32c.c  test_crypto.c  test_features.c  test_flow_control.c  test_frame.c  test_handshake.c  test_hardening.c  test_hash_map.c  test_migration.c  test_packet.c  test_packet_buffer.c  test_performance.c  test_pool.c  test_priority_queue.c  test_ring_buffer.c  test_senarios.c  test_server.c  test_session_ticket.c  test_stream.c  test_universal.c  test_varint.c  test_websocket.c
tools/: CMakeLists.txt
